# Agents_Langgraph

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  EASYPANEL.md  ENVIRONMENT.md  INSTALACAO.md  MUDANCAS_UV.md  Makefile  PRONTO_PARA_DEPLOY.md  README.md  RESUMO_FINAL.md  UV.md  [ATIVACAO USUARIO].json  [FLUXO PRINCIPAL].json  [INCLUI LEMBRETES].json  [RELATORIO DETALHADO].json  deploy.sh  docker-compose.yml  generate-lock.sh  init_database.py  pyproject.toml  requirements.txt  run.py  validate_env.py
.claude/: settings.local.json
app/: main.py
app/api/endpoints/: categories.py  charts.py  dashboard.py  payment_methods.py  reminders.py  transactions.py  wallet.py  webhooks.py
app/core/: config.py  security.py
app/db/: database.py  init_db.py
app/integrations/: gemini_client.py  openai_client.py  uazapi.py
app/models/: __init__.py  category.py  payment_method.py  reminder.py  transaction.py  user.py  wallet.py
app/schemas/: __init__.py  category.py  payment_method.py  reminder.py  transaction.py  user.py  webhook.py
app/services/: advanced_tools.py  langgraph_agent.py  langgraph_tools.py  message_processor.py  transaction_service.py  user_service.py
